; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_x86.c_kvm_vm_ioctl_get_pit.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_x86.c_kvm_vm_ioctl_get_pit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.kvm_kpit_state }
%struct.kvm_kpit_state = type { i32, i32 }
%struct.kvm_pit_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm*, %struct.kvm_pit_state*)* @kvm_vm_ioctl_get_pit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kvm_vm_ioctl_get_pit(%struct.kvm* %0, %struct.kvm_pit_state* %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca %struct.kvm_pit_state*, align 8
  %5 = alloca %struct.kvm_kpit_state*, align 8
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store %struct.kvm_pit_state* %1, %struct.kvm_pit_state** %4, align 8
  %6 = load %struct.kvm*, %struct.kvm** %3, align 8
  %7 = getelementptr inbounds %struct.kvm, %struct.kvm* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store %struct.kvm_kpit_state* %10, %struct.kvm_kpit_state** %5, align 8
  %11 = call i32 @BUILD_BUG_ON(i32 0)
  %12 = load %struct.kvm_kpit_state*, %struct.kvm_kpit_state** %5, align 8
  %13 = getelementptr inbounds %struct.kvm_kpit_state, %struct.kvm_kpit_state* %12, i32 0, i32 0
  %14 = call i32 @mutex_lock(i32* %13)
  %15 = load %struct.kvm_pit_state*, %struct.kvm_pit_state** %4, align 8
  %16 = load %struct.kvm_kpit_state*, %struct.kvm_kpit_state** %5, align 8
  %17 = getelementptr inbounds %struct.kvm_kpit_state, %struct.kvm_kpit_state* %16, i32 0, i32 1
  %18 = call i32 @memcpy(%struct.kvm_pit_state* %15, i32* %17, i32 4)
  %19 = load %struct.kvm_kpit_state*, %struct.kvm_kpit_state** %5, align 8
  %20 = getelementptr inbounds %struct.kvm_kpit_state, %struct.kvm_kpit_state* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  ret i32 0
}

declare dso_local i32 @BUILD_BUG_ON(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @memcpy(%struct.kvm_pit_state*, i32*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
